fixed what i messed up sunday
fixed what i messed up sunday

--- a/css/application.css
+++ b/css/application.css
@@ -2587,7 +2587,19 @@ h4 {
   text-decoration: underline;
 }
 
-.Small-nav-menu {
+@media (min-width: 991px) {
+  #top-part-nav {
+    display: none;
+  }
+}
+
+@media (max-width: 992px) {
+  #hidden-services {
+    display: none;
+  }
+}
+
+.small-nav-menu {
   width: 280px;
   top: 0;
   right: 0;
@@ -2602,7 +2614,7 @@ h4 {
   text-decoration: none;
 }
 
-.Small-nav-menu .small-nav-header {
+.small-nav-menu .small-nav-header {
   padding: 1rem;
   margin-bottom: 1.5rem;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -2610,102 +2622,83 @@ h4 {
   border-radius: 3px;
 }
 
-.Small-nav-menu .small-nav-header:hover {
+.small-nav-menu .small-nav-header:hover {
   background-color: rgba(255, 255, 255, 0.05);
 }
 
-.Small-nav-menu i {
+.small-nav-menu i {
   width: 100%;
   font-size: 24px;
 }
 
-.Small-nav-menu .fa-laptop {
+.small-nav-menu .fa-laptop {
   color: #67809f;
 }
 
-.Small-nav-menu .fa-computer {
+.small-nav-menu .fa-computer {
   color: #4183d7;
 }
 
-.Small-nav-menu .fa-chart-simple {
+.small-nav-menu .fa-chart-simple {
   color: #2ecc71;
 }
 
-.Small-nav-menu .fa-phone-volume {
+.small-nav-menu .fa-phone-volume {
   color: #d64541;
 }
 
-.Small-nav-menu .fa-code {
+.small-nav-menu .fa-code {
   color: #926fb1;
 }
 
-.Small-nav-menu .fa-shield {
+.small-nav-menu .fa-shield {
   color: #f62459;
 }
 
-.Small-nav-menu .fa-graduation-cap {
+.small-nav-menu .fa-graduation-cap {
   color: #ce4125;
 }
 
-.Small-nav-menu small {
+.small-nav-menu small {
   font-size: .625rem;
   padding-bottom: 1px;
   width: 100%;
 }
 
-.Small-nav-menu p {
+.small-nav-menu p {
   width: 100%;
 }
 
-.Small-nav-menu .sub-menu {
+.small-nav-menu .sub-menu {
   border-radius: 3px;
   margin-bottom: 1.5rem;
 }
 
-.Small-nav-menu .sub-menu li {
+.small-nav-menu .sub-menu li {
   background-color: #262834;
   border-top: 1px solid rgba(255, 255, 255, 0.05);
   border-radius: 3px;
   padding: 12px;
 }
 
-.Small-nav-menu .small-nav-bottom .small-nav-header2:hover {
+.small-nav-menu .small-nav-bottom .small-nav-header2:hover {
   background-color: rgba(255, 255, 255, 0.05);
 }
 
-.Small-nav-menu .small-nav-bottom li {
+.small-nav-menu .small-nav-bottom li {
   display: flex;
   padding: 20px;
   border-top: 1px solid rgba(255, 255, 255, 0.05);
 }
 
-.Small-nav-menu .small-nav-bottom .sub-menu2 li {
+.small-nav-menu .small-nav-bottom .sub-menu2 li {
   padding: 15px 20px;
   font-size: .875rem;
   background-color: rgba(0, 0, 0, 0.25);
 }
 
-.Small-nav-menu .small-nav-bottom .sub-menu2 li a::before {
+.small-nav-menu .small-nav-bottom .sub-menu2 li a::before {
   content: "»";
-}
-
-.dark-overlay-menu {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5);
-  z-index: 998;
-}
-
-.dark-overlay-menu.active {
-  display: block;
-}
-
-.dark-overlay-menu.active:hover {
-  cursor: pointer;
 }
 
 .hamburger {
