--- a/scss/modules/_sidemenu-large.scss
+++ b/scss/modules/_sidemenu-large.scss
@@ -1,22 +1,22 @@
 // Side Menu large
 
-.dark-overlay-menu {
-    display: none;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    z-index: 998;
+// .dark-overlay-menu {
+//     display: none;
+//     position: fixed;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background: rgba(0, 0, 0, 0.5);
+//     z-index: 998;
 
-}
+// }
 
-.dark-overlay-menu.active {
-    display: block;
-&:hover {
-    cursor: pointer;
-}
-}
+// .dark-overlay-menu.active {
+//     display: block;
+// &:hover {
+//     cursor: pointer;
+// }
+// }
 
 
